--- a/Bridge/Temp.ipynb
+++ b/Bridge/Temp.ipynb
@@ -28,24 +28,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fa8d87cc370>"
+       "<IPython.lib.display.IFrame at 0x7fa8d846d9d0>"
       ],
       "text/html": "\n        <iframe\n            width=\"100%\"\n            height=\"500px\"\n            src=\"https://coderefinery.github.io/jupyter/\"\n            frameborder=\"0\"\n            allowfullscreen\n        ></iframe>\n        "
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 7
     }
    ],
    "source": [
     "from IPython.display import IFrame\n",
     "IFrame(src=\"https://coderefinery.github.io/jupyter/\", width='100%', height='500px')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-10-cf3e3148053f>, line 1)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-cf3e3148053f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    - square area: $s = (2 r)^2$\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "- square area: $s = (2 r)^2$\n",
+    " - circle area: $c = \\pi r^2$\n",
+    " - $c/s = (\\pi r^2) / (4 r^2) = \\pi / 4$\n",
+    " - $\\pi = 4 * c/s$"
    ]
   },
   {
@@ -57,9 +78,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-e2472fdb4935>, line 1)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-e2472fdb4935>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Easy:\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "Easy:\n",
@@ -72,6 +102,13 @@
     "https://github.com/MishaShapo/Monte_Carlo_Stocks/blob/master/Simulating_Stock_Prices_with_Monte_Carlo_Methods.ipynb\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
